syntax = "proto3";

package mastermgmt.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/mastermgmt/v1;mpb";

message VerifyAppVersionRequest {
}

message VerifyAppVersionResponse {
  bool isValid = 1;
}

// services
service VersionControlReaderService {
    rpc VerifyAppVersion(VerifyAppVersionRequest) returns (VerifyAppVersionResponse);
}